dos2unix site; more content

--- a/site/index.html
+++ b/site/index.html
@@ -20,7 +20,7 @@
             <img src='./assets/logo.png' />
             <h1>WORAUF WARTEST DU</h1>
 
-            <a href="https://app.flux.fail/" class="btn">LOG IN</a>
+            <a href="https://app.flux.fail/" class="btn">JETZT ANMELDEN</a>
         </div>
     </section>
     <section>
@@ -33,7 +33,7 @@
         </h3>
     </section>
     <div class="w3-container w3-text-red">
-        <center class="w3-panel"><strong>OPEN BETA</strong></center>
+        <center class="w3-panel"><strong>OPEN BETA<br />OUT NOW</strong></center>
     </div>
     <section>
         <div class="grid">
@@ -49,6 +49,7 @@
                 <p>
                     Das erklärte Ziel ist es einen öffentlichkeitswirksamen Anreiz für die Verkehrsanbieter zu schaffen
                     verstärkt Zeit und Geld in die eigene Zuverlässigkeit zu investieren.
+                    <i>#weilwirpünktlichkeitlieben #fluxfail</i>
                 </p>
                 <div class="info">
                     <h4>Gemeinsam sind wir viele!</h4>
@@ -115,37 +116,33 @@
 
         </div>
     </section>
-
-
-    <!-- section>
+    <section>
         <div class="grid">
             <div class="col col-center">
                 <img class="screenshot" src="./assets/screenshot4.png" />
             </div>
             <div class="col">
-                <h3>Hilf mit, die Statistiken zu verbessern</h3>
+                <h3>Vision, Motivation, Zukunft</h3>
                 <p>
-                    flux.fail erfasst in erster Linie die Verspätungen der Fahrgäste, nicht direkt die der
-                    Verkehrsunternehmen. Die Verkehrsunternehmen veröffentlichen regelmäßig eigenen Zahlen.
-                    Mithilfe unserer Daten wird endlich eine Möglichkeit geschaffen die offiziellen Zahlen
-                    der Verkehrsunternehmen mit den Meldungen der Fahrgäste gegenüberzustellen und zu
-                    vergleichen.
+                    Entstanden ist flux.fail, weil wir selbst in unserem Alltag auf die Öffis angewiesen und deren
+                    teils unerhörter Unzuverlässigkeit ausgeliefert sind.
+                    Heute treten wir mit flux.fail dazu an eine führende Plattform zur Erfassung, Veröffentlichung und
+                    Verarbeitung von Verspätungsdaten im ÖPNV zu werden.
                 </p>
                 <p>
-                    Aus diesem Grund veröffentlichen wir auch umgehend alle Meldungen. Sobald wir ausreichend
-                    Testdaten gesammelt haben, werden wir beginnen unsere Meldungen in Form von Web-Graphen
-                    online zu stellen und die Daten so für jedermann leicht durchsuchbar zu machen.
+                    Wir haben noch große Pläne, sobald wir eine kritische Nutzerbasis erreichen.
+                    Geplant sind unter Anderem noch KI, Machine-Learning, Blockchain und Big-Data.
                 </p>
                 <div class="info">
-                    <h4>Deine persönliche Datenanalyse</h4>
+                    <h4>Cyber-Sicherheit</h4>
                     <p>
-                        Vergleiche deine Statistik mit der Gesamtstatistik oder anderen Accounts. Filtere die
-                        Daten nach selbstgewählten Kriterien und betreibe so deine eigene Datenanalyse.
+                        Nebenbei liegt unser Fokus auch ganz bewusst auf der Demonstration, wie eine Online-Plattform des
+                        21. Jahrhunderts <i>#cybersicherheit</i> im Internet praktizieren kann und sollte.
                     </p>
                 </div>
             </div>
         </div>
-    </section -->
+    </section>
     <section>
         <h3>Das ist flux.fail</h3>
         <p class="justified">
@@ -160,7 +157,7 @@
             das Versagen der Verkehrsanbieter an angebrachter Stelle öffentlichkeitswirksam anzuprangern.
         </p>
         <br /><br />
-        <a href="https://app.flux.fail/" class="btn">Jetzt anmelden!</a>
+        <a href="https://app.flux.fail/" class="btn">JETZT ANMELDEN</a>
     </section>
     <section>
         <img class="no_mobile" src='./assets/logo_big.png' />
