--- a/site/index.html
+++ b/site/index.html
@@ -126,20 +126,13 @@
                 <p>
                     Entstanden ist flux.fail, weil wir selbst in unserem Alltag auf die Öffis angewiesen und deren
                     teils unerhörter Unzuverlässigkeit ausgeliefert sind.
-                    Heute treten wir mit flux.fail dazu an eine führende Plattform zur Erfassung, Veröffentlichung und
+                    Heute treten wir mit flux.fail an eine führende Plattform zur Erfassung, Veröffentlichung und
                     Verarbeitung von Verspätungsdaten im ÖPNV zu werden.
                 </p>
                 <p>
                     Wir haben noch große Pläne, sobald wir eine kritische Nutzerbasis erreichen.
                     Geplant sind unter Anderem noch KI, Machine-Learning, Blockchain und Big-Data.
                 </p>
-                <div class="info">
-                    <h4>Cyber-Sicherheit</h4>
-                    <p>
-                        Nebenbei liegt unser Fokus auch ganz bewusst auf der Demonstration, wie eine Online-Plattform des
-                        21. Jahrhunderts <i>#cybersicherheit</i> im Internet praktizieren kann und sollte.
-                    </p>
-                </div>
             </div>
         </div>
     </section>
