--- a/site/index.html
+++ b/site/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!--
+      If you interested in supporting us building this platform,
+      please feel welcome to get in touch with:
+        career@flux.fail
+-->
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>flux.fail</title>
     <link rel="stylesheet" href="/assets/css/w3.css">
     <link rel="stylesheet" href="/assets/css/styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
@@ -20,14 +26,20 @@
             <img src='./assets/logo.png' />
             <h1>WORAUF WARTEST DU</h1>
 
-            <a href="https://app.flux.fail/" class="btn">JETZT ANMELDEN</a>
+            <a href="https://app.flux.fail/" class="btn">JETZT MITMACHEN</a>
         </div>
     </section>
     <section>
         <img class="logo_sub" src='./assets/logo_text.png' />
-        <h3 class="w3-center">
-            WIR TRACKEN DIE VERSPÄTUNGEN DER ÖFFIS.<br>
-            NICHT DICH.<br />
+        <h3 class="w3-center w3-hide-small">
+            WIR TRACKEN DIE VERSPÄTUNGEN DER ÖFFIS. NICHT DICH.<br />
+            OPEN DATA. OPEN SOURCE.
+        </h3>
+        <h3 class="w3-center w3-hide-medium w3-hide-large">
+            WIR TRACKEN<br />
+            DIE VERSPÄTUNGEN<br />
+            DER ÖFFIS. NICHT DICH.<br />
+            &mdash;<br />
             OPEN DATA.<br />
             OPEN SOURCE.
         </h3>
@@ -49,8 +61,11 @@
                 <p>
                     Das erklärte Ziel ist es einen öffentlichkeitswirksamen Anreiz für die Verkehrsanbieter zu schaffen
                     verstärkt Zeit und Geld in die eigene Zuverlässigkeit zu investieren.
-                    <i>#weilwirpünktlichkeitlieben #fluxfail</i>
+                    <br />
+                    <i class="w3-right">#fluxfail #weilwirpünktlichkeitlieben</i>
+                    <br />
                 </p>
+                <br />
                 <div class="info">
                     <h4>Gemeinsam sind wir viele!</h4>
                     <p>
@@ -96,9 +111,9 @@
             <div class="col">
                 <h3>Open Data. Open Source.</h3>
                 <p>
-                    Wir glauben daran, dass die Offenlegung von Quellcode zu einer insgesamt besseren Qualität von
-                    Software führt. Daher ist flux.fail 100% open source. So kann jeder selbst überprüfen welche Daten
-                    wir erfassen und wie wir mit ihnen umgehen.
+                    Die Offenlegung von Quellcode führt zu einer insgesamt größeren Transparenz von Software.
+                    Daher ist flux.fail 100% open source.
+                    So kann jeder selbst überprüfen welche Daten wir erfassen und wie wir mit ihnen umgehen.
                 </p>
                 <p>
                     Alle gemeldeten Verspätungen sind sofort öffentlich abrufbar.
@@ -106,10 +121,10 @@
                     persönliche Datenanalyse betreiben und Metriken ermitteln kann.
                 </p>
                 <div class="info">
-                    <h4>Flux Code Community</h4>
+                    <h4>Flux Community</h4>
                     <p>
-                        Werde Teil der Flux Code Community und leiste deinen Beitrag. Gemeinsam schaffen wir eine
-                        Plattform, die unser aller Alltag ein bisschen angenehmer macht.
+                        Werde Teil der Flux Community und leiste deinen Beitrag. Gemeinsam schaffen wir eine Plattform,
+                        die unser aller Alltag ein bisschen besser macht.
                     </p>
                 </div>
             </div>
@@ -126,12 +141,15 @@
                 <p>
                     Entstanden ist flux.fail, weil wir selbst in unserem Alltag auf die Öffis angewiesen und deren
                     teils unerhörter Unzuverlässigkeit ausgeliefert sind.
-                    Heute treten wir mit flux.fail an eine führende Plattform zur Erfassung, Veröffentlichung und
-                    Verarbeitung von Verspätungsdaten im ÖPNV zu werden.
+                    Heute treten wir mit flux.fail dazu an eine führende Plattform zur Erfassung, Veröffentlichung und
+                    Verarbeitung von Verspätungsdaten des ÖPNV zu werden.
                 </p>
                 <p>
-                    Wir haben noch große Pläne, sobald wir eine kritische Nutzerbasis erreichen.
-                    Geplant sind unter Anderem noch KI, Machine-Learning, Blockchain und Big-Data.
+                    Wir haben noch große Pläne, sobald wir eine kritische Nutzerbasis erreicht haben.
+                    Geplant sind unter Anderem noch KI, Machine-Learning, Blockchain und Big-Data zur Optimierung
+                    der ÖPNV Mobilität.
+                    <br />
+                    <i class="w3-right">#cyber #fullspectrum</i>
                 </p>
             </div>
         </div>
@@ -139,8 +157,8 @@
     <section>
         <h3>Das ist flux.fail</h3>
         <p class="justified">
-            flux.fail ist eine Web-Plattform auf der die Benutzer in einem spielerischen Format kostenlos die Verspätungen
-            ihrer öffentlichen Verkehrsmittel melden und verfolgen können. Gemeldete Verspätungen werden öffentlich
+            flux.fail ist eine Plattform auf der die Benutzer in einem spielerischen Format kostenlos die Verspätungen
+            von öffentlichen Verkehrsmitteln melden und verfolgen können. Gemeldete Verspätungen werden öffentlich
             gemacht, so dass die Benutzer sich in Echtzeit gegenseitig über derzeit auftretende Verspätungen informieren
             und gegebenenfalls rechtzeitig auf alternative Verbindungen ausweichen können.
         </p>
@@ -150,13 +168,13 @@
             das Versagen der Verkehrsanbieter an angebrachter Stelle öffentlichkeitswirksam anzuprangern.
         </p>
         <br /><br />
-        <a href="https://app.flux.fail/" class="btn">JETZT ANMELDEN</a>
+        <a href="https://app.flux.fail/" class="btn">JETZT MITMACHEN</a>
     </section>
     <section>
         <img class="no_mobile" src='./assets/logo_big.png' />
     </section>
     <footer>
-        <p>Made with ❤ in Berlin</p>
+        <p>Made with ❤ in Berlin | <a href="/about.html">Impressum</a></p>
     </footer>
 </body>
 
