final changes before releasing open beta

--- a/site/about.html
+++ b/site/about.html
@@ -20,7 +20,7 @@
     <section class="hero">
       <div
         class="background-image"
-        style="background: linear-gradient( rgba(0,0,0,0.6), rgba(0, 0, 0, 0.6) ),url(../assets/588599304-2048x2048.jpg) no-repeat center bottom fixed"></div>
+        style="background: linear-gradient( rgba(0,0,0,0.6), rgba(0, 0, 0, 0.6) ),url(../assets/trainstation.jpg) no-repeat center bottom fixed"></div>
 
       <div class="hero-content-area">
         <a href="/">
