--- a/site/index.html
+++ b/site/index.html
@@ -20,7 +20,7 @@
     <section class="hero">
         <div
             class="background-image"
-            style="background: linear-gradient( rgba(0,0,0,0.6), rgba(0, 0, 0, 0.6) ),url(../assets/588599304-2048x2048.jpg) no-repeat center bottom fixed"></div>
+            style="background: linear-gradient( rgba(0,0,0,0.6), rgba(0, 0, 0, 0.6) ),url(../assets/trainstation.jpg) no-repeat center bottom fixed"></div>
 
         <div class="hero-content-area">
             <img src='./assets/logo.png' />
@@ -80,7 +80,7 @@
     <section>
         <div class="grid">
             <div class="col col-center">
-                <img class="screenshot" src="./assets/screenshot2.png" />
+                <img class="screenshot" src="./assets/screenshot2.png" width="100%" />
             </div>
             <div class="col">
                 <h3>Privacy &amp; Datenschutz</h3>
@@ -106,7 +106,7 @@
     <section>
         <div class="grid">
             <div class="col col-center">
-                <img class="screenshot" src="./assets/screenshot3.png" />
+                <img class="screenshot" src="./assets/screenshot3.png" width="100%" />
             </div>
             <div class="col">
                 <h3>Open Data. Open Source.</h3>
@@ -134,7 +134,7 @@
     <section>
         <div class="grid">
             <div class="col col-center">
-                <img class="screenshot" src="./assets/screenshot4.png" />
+                <img class="logo_sub" src='./assets/screenshot4.png' />
             </div>
             <div class="col">
                 <h3>Vision, Motivation, Zukunft</h3>
@@ -155,6 +155,9 @@
         </div>
     </section>
     <section>
+        <div class="col col-center">
+            <img class="logo_sub" src='./assets/logo_text.png' />
+        </div>
         <h3>Das ist flux.fail</h3>
         <p class="justified">
             flux.fail ist eine Plattform auf der die Benutzer in einem spielerischen Format kostenlos die Verspätungen
