fix background-color of open beta notice

--- a/site/index.html
+++ b/site/index.html
@@ -44,7 +44,7 @@
             OPEN SOURCE.
         </h3>
     </section>
-    <div class="w3-container w3-text-red">
+    <div class="w3-container w3-text-red w3-white">
         <center class="w3-panel"><strong>OPEN BETA<br />OUT NOW</strong></center>
     </div>
     <section>
