fix too small margins on landingpage

--- a/site/index.html
+++ b/site/index.html
@@ -155,11 +155,12 @@
         </div>
     </section>
     <section>
+        <h3>DAS IST</h3>
         <div class="col col-center">
             <img class="logo_sub" src='./assets/logo_text.png' />
         </div>
-        <h3>Das ist flux.fail</h3>
         <p class="justified">
+            <br />
             flux.fail ist eine Plattform auf der die Benutzer in einem spielerischen Format kostenlos die Verspätungen
             von öffentlichen Verkehrsmitteln melden und verfolgen können. Gemeldete Verspätungen werden öffentlich
             gemacht, so dass die Benutzer sich in Echtzeit gegenseitig über derzeit auftretende Verspätungen informieren
@@ -170,8 +171,7 @@
             Fahrgast dadurch die Möglichkeit gegeben seiner Frustration über die Verspätungen Ausdruck zu verleihen und
             das Versagen der Verkehrsanbieter an angebrachter Stelle öffentlichkeitswirksam anzuprangern.
         </p>
-        <br /><br />
-        <a href="https://app.flux.fail/" class="btn">JETZT MITMACHEN</a>
+        <a href="https://app.flux.fail/" class="btn" style="margin-top:24px;">JETZT MITMACHEN</a>
     </section>
     <section>
         <img class="no_mobile" src='./assets/logo_big.png' />
