--- a/site/index.html
+++ b/site/index.html
@@ -31,14 +31,13 @@
     </section>
     <section>
         <img class="logo_sub" src='./assets/logo_text.png' />
-        <h3 class="w3-center w3-hide-small">
-            WIR TRACKEN DIE VERSPÄTUNGEN DER ÖFFIS. NICHT DICH.<br />
+        <h3 class="w3-center w3-hide-medium w3-hide-small">
+            WIR TRACKEN VERSPÄTUNGEN. NICHT DICH.<br />
             OPEN DATA. OPEN SOURCE.
         </h3>
-        <h3 class="w3-center w3-hide-medium w3-hide-large">
-            WIR TRACKEN<br />
-            DIE VERSPÄTUNGEN<br />
-            DER ÖFFIS. NICHT DICH.<br />
+        <h3 class="w3-center w3-hide-large">
+            WIR TRACKEN VERSPÄTUNGEN.<br />
+            NICHT DICH.<br />
             &mdash;<br />
             OPEN DATA.<br />
             OPEN SOURCE.
