--- a/site/index.html
+++ b/site/index.html
@@ -16,7 +16,6 @@
 </head>
 
 <body>
-
     <section class="hero">
         <div
             class="background-image"
@@ -59,7 +58,7 @@
                 </p>
                 <p>
                     Das erklärte Ziel ist es einen öffentlichkeitswirksamen Anreiz für die Verkehrsanbieter zu schaffen
-                    verstärkt Zeit und Geld in die eigene Zuverlässigkeit zu investieren.
+                    verstärkt in die eigene Zuverlässigkeit zu investieren.
                     <br />
                     <i class="w3-right">#fluxfail #weilwirpünktlichkeitlieben</i>
                     <br />
@@ -84,19 +83,19 @@
             <div class="col">
                 <h3>Privacy &amp; Datenschutz</h3>
                 <p>
-                    Um sich zu registrieren ist einzig eine gültige E-Mail Adresse erforderlich.
-                    Wir erfassen bewusst keine weiteren personenbezogenen Daten.
+                    Der Zweck von flux.fail besteht ausdrücklich in der Erfassung und Veröffentlichung von
+                    Verspätungen im Linienverkehrsnetz.
                 </p>
                 <p>
-                    Der Zweck von flux.fail besteht ausdrücklich in der Erfassung und Veröffentlichung der
-                    Verspätungszeiten der öffentlichen Verkehrsmittel; ausdrücklich nicht in der Erfassung,
-                    Veröffentlichung und/oder Verarbeitung der Bewegungsdaten der Nutzer.
+                    Für die Nutzung von flux.fail ist einzig eine gültige E-Mail Adresse erforderlich.
                 </p>
                 <div class="info">
                     <h4>Datenschutz durch Datenarmut!</h4>
                     <p>
-                        Der allerbeste Datenschutz besteht ganz einfach darin Daten gar nicht erst zu erfassen.
-                        Denn Daten die man nie hatte, können auch nicht weitergegeben oder gestohlen werden.
+                        Die allerbeste Datenschutzmaßnahme besteht ganz einfach darin Daten gar nicht erst zu
+                        besitzen.
+                        Näheres dazu in unserer
+                        <a href="/about.html#Datenschutzerklärung">Datenschutzerklärung</a>.
                     </p>
                 </div>
             </div>
@@ -110,14 +109,17 @@
             <div class="col">
                 <h3>Open Data. Open Source.</h3>
                 <p>
-                    Die Offenlegung von Quellcode führt zu einer insgesamt größeren Transparenz von Software.
-                    Daher ist flux.fail 100% open source.
+                    flux.fail ist <a href="https://github.com/FluxFail/flux.fail/" target="_blank">
+                            100% open source</a>.
                     So kann jeder selbst überprüfen welche Daten wir erfassen und wie wir mit ihnen umgehen.
                 </p>
                 <p>
-                    Alle gemeldeten Verspätungen sind sofort öffentlich abrufbar.
-                    Es soll ein Statistik Interface bereitgestellt werden, mit dessen Hilfe dann jeder selbst seine ganz
-                    persönliche Datenanalyse betreiben und Metriken ermitteln kann.
+                    Alle gemeldeten Verspätungen sind sofort für alle Nutzer sichtbar.
+                    Es soll ein <a href="https://grafana.com/grafana" target="_blank">
+                        Statistik Interface
+                    </a>
+                        bereitgestellt werden, mit dessen Hilfe dann jeder selbst seine ganz
+                        persönliche Datenanalyse erstellen und Metriken ermitteln kann.
                 </p>
                 <div class="info">
                     <h4>Flux Community</h4>
@@ -138,8 +140,10 @@
             <div class="col">
                 <h3>Vision, Motivation, Zukunft</h3>
                 <p>
-                    Entstanden ist flux.fail, weil wir selbst in unserem Alltag auf die Öffis angewiesen und deren
-                    teils unerhörter Unzuverlässigkeit ausgeliefert sind.
+                    Entstanden ist flux.fail, weil wir selbst zu häufig der teils unerhörten Unzuverlässigkeit der
+                    diversen Verkehrsanbieter ausgesetzt waren.
+                </p>
+                <p>
                     Heute treten wir mit flux.fail dazu an eine führende Plattform zur Erfassung, Veröffentlichung und
                     Verarbeitung von Verspätungsdaten des ÖPNV zu werden.
                 </p>
@@ -166,11 +170,16 @@
             und gegebenenfalls rechtzeitig auf alternative Verbindungen ausweichen können.
         </p>
         <p class="justified">
-            Außerdem wird dem wartenden
-            Fahrgast dadurch die Möglichkeit gegeben seiner Frustration über die Verspätungen Ausdruck zu verleihen und
-            das Versagen der Verkehrsanbieter an angebrachter Stelle öffentlichkeitswirksam anzuprangern.
+            Außerdem wird dem wartenden Fahrgast so die Möglichkeit geboten seiner Frustration über die Verspätungen
+            Ausdruck zu verleihen und das Versagen der Verkehrsanbieter an angebrachter Stelle öffentlichkeitswirksam
+            anzuprangern.
         </p>
-        <a href="https://app.flux.fail/" class="btn" style="margin-top:24px;">JETZT MITMACHEN</a>
+        <a href="https://app.flux.fail/" 
+            class="btn" 
+            style="margin-top:24px; text-decoration: none; color: white;"
+        >
+            JETZT MITMACHEN
+        </a>
     </section>
     <section>
         <img class="no_mobile" src='./assets/logo_big.png' />
