--- a/site/index.html
+++ b/site/index.html
@@ -16,6 +16,15 @@
 </head>
 
 <body>
+    <section class="w3-container">
+        <center class="w3-panel" style="letter-spacing: 4px; font-size: 1em;">
+            <strong>
+                &mdash;
+                OPEN BETA
+                &mdash;
+            </strong>
+        </center>
+    </section>
     <section class="hero">
         <div
             class="background-image"
@@ -42,9 +51,6 @@
             OPEN SOURCE.
         </h3>
     </section>
-    <div class="w3-container w3-text-red w3-white">
-        <center class="w3-panel"><strong>OPEN BETA<br />OUT NOW</strong></center>
-    </div>
     <section>
         <div class="grid">
             <div class="col col-center">
@@ -53,12 +59,13 @@
             <div class="col">
                 <h3>Die Idee ist ganz einfach!</h3>
                 <p>
-                    Wir alle informieren uns gegenseitig über Verspätungen im Linienverkehr und veröffentlichen die
+                    Wir crowd-sourcen das Melden von Verspätungen an die Fahrgäste und veröffentlichen die
                     gesammelten Daten so, dass sie für jeden einsehbar und leicht durchsuchbar sind.
                 </p>
                 <p>
-                    Das erklärte Ziel ist es einen öffentlichkeitswirksamen Anreiz für die Verkehrsanbieter zu schaffen
-                    verstärkt in die eigene Zuverlässigkeit zu investieren.
+                    Das erklärte Ziel ist es die Verspätungs-Statistik der Verkehrsanbieter mit der erlebten
+                    Verspätung ihrer Fahrgäste gegenüberzustellen, um so einen öffentlichkeitswirksamen Anreiz
+                    zu schaffen verstärkt in die eigene Zuverlässigkeit zu investieren.
                     <br />
                     <i class="w3-right">#fluxfail #weilwirpünktlichkeitlieben</i>
                     <br />
@@ -67,7 +74,7 @@
                 <div class="info">
                     <h4>Gemeinsam sind wir viele!</h4>
                     <p>
-                        Lade Freunde dazu ein in deiner Stadt mitzumachen.
+                        Lade Freunde dazu ein in deiner Region mitzumachen.
                         Je mehr Nutzer, desto mehr Verspätungs-Meldungen.
                     </p>
                 </div>
@@ -84,10 +91,13 @@
                 <h3>Privacy &amp; Datenschutz</h3>
                 <p>
                     Der Zweck von flux.fail besteht ausdrücklich in der Erfassung und Veröffentlichung von
-                    Verspätungen im Linienverkehrsnetz.
+                    Verspätungen der Verkehrsmittel.
                 </p>
                 <p>
                     Für die Nutzung von flux.fail ist einzig eine gültige E-Mail Adresse erforderlich.
+                    Ansonsten erhebt die Plattform keine personenbezogenen Daten und ergreift Maßnahmen,
+                    um Rückschlüsse der Meldungen auf bestimmte Personen so gut es eben geht technisch zu
+                    erschweren.
                 </p>
                 <div class="info">
                     <h4>Datenschutz durch Datenarmut!</h4>
@@ -140,21 +150,16 @@
             <div class="col">
                 <h3>Vision, Motivation, Zukunft</h3>
                 <p>
-                    Entstanden ist flux.fail, weil wir selbst zu häufig der teils unerhörten Unzuverlässigkeit der
-                    diversen Verkehrsanbieter ausgesetzt waren.
+                    Entstanden ist flux.fail, weil wir selbst zu häufig der teils unerhörten Unzuverlässigkeit und
+                    dem schlechten Service einiger Verkehrsanbieter ausgesetzt waren.
+                    Wir haben keine Lust mehr uns dieser Situation machtlos ausgeliefert zu sehen.
                 </p>
                 <p>
-                    Heute treten wir mit flux.fail dazu an eine führende Plattform zur Erfassung, Veröffentlichung und
-                    Verarbeitung von Verspätungsdaten des ÖPNV zu werden.
+                    Heute treten wir mit flux.fail dazu an einen öffentlichkeitswirksamen Anreiz für die diversen
+                    Verkehrsanbieter zu schaffen mehr Zeit und Geld in die eigene Zuverlässigkeit zu investieren.
                 </p>
                 <p>
-                    Wir haben noch große Pläne, sobald wir eine kritische Nutzerbasis erreicht haben.
-                    Geplant sind unter Anderem noch KI, Machine-Learning, Blockchain und Big-Data zur Optimierung
-                    der ÖPNV Mobilität.
-                    <br />
-                    <i class="w3-right">#cyber #fullspectrum</i>
                 </p>
-            </div>
         </div>
     </section>
     <section>
@@ -162,17 +167,35 @@
         <div class="col col-center">
             <img class="logo_sub" src='./assets/logo_text.png' />
         </div>
-        <p class="justified">
+        <p class="w3-justify">
             <br />
             flux.fail ist eine Plattform auf der die Benutzer in einem spielerischen Format kostenlos die Verspätungen
             von öffentlichen Verkehrsmitteln melden und verfolgen können. Gemeldete Verspätungen werden öffentlich
             gemacht, so dass die Benutzer sich in Echtzeit gegenseitig über derzeit auftretende Verspätungen informieren
             und gegebenenfalls rechtzeitig auf alternative Verbindungen ausweichen können.
         </p>
-        <p class="justified">
+        <p class="w3-justify">
             Außerdem wird dem wartenden Fahrgast so die Möglichkeit geboten seiner Frustration über die Verspätungen
             Ausdruck zu verleihen und das Versagen der Verkehrsanbieter an angebrachter Stelle öffentlichkeitswirksam
             anzuprangern.
+        </p>
+        <hr />
+        <h3>SO EINFACH GEHT'S</h3>
+        <h4>Anmelden</h4>
+        <p class="w3-justify">
+            Um sich anzumelden, ist einzig eine E-Mail Adresse erforderlich.
+            An diese Adresse verschicken wir eine Mail mit einem Login-Link, der genau ein mal gültig ist.
+            Wenn du diesen Link öffnest, bist du mit deinem Browser angemeldet.
+            Solange du dich immer mit der selben E-Mail Adresse anmeldest, können wir alle deine alten Meldungen
+            deiner neuen Browser Session zuordnen.
+        </p>
+        <hr />
+        <h4>Verspätungen melden</h4>
+        <p class="w3-justify">
+            Sobald du angemeldet bist kannst du Verspätungen melden.
+            Alle Meldungen werden sofort veröffentlicht.
+            Andere Benutzer können deine Meldungen bestätigen, wenn sie auch betroffen sind.
+            Wieviele Benutzer eine Meldung bereits bestätigt haben wird direkt neben der Meldung angezeigt.
         </p>
         <a href="https://app.flux.fail/" 
             class="btn" 
