--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/ant-override.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#005cb2">
+    <script src="js/fetch.umd.js"></script> 
   </head>
   <body>
     <div id="app"></div>
