--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/vuetify/dist/vuetify.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="icon" href="/static/favicon.png" type="image/png">
     <title>flux.fail</title>
   </head>
   <body>
